--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
               real-world challenges, and grow in a dynamic environment.
             </p>
             <a
-              href="./assets/Resume/Niresh New Resume ATS.pdf"
+              href="./assets/Resume/Niresh New Resume Developer.pdf"
               target="_blank"
               class="button"
               data-aos="fade-down"
